tests/baselines/reference/moduleCrashInJSFile.errors.txt
tests/cases/compiler/a.js(2,8): error TS2300: Duplicate identifier 'foo'.
tests/cases/compiler/a.js(2,8): error TS8006: 'module' declarations can only be used in TypeScript files.
tests/cases/compiler/a.js(3,5): error TS2331: 'this' cannot be referenced in a module or namespace body.
tests/cases/compiler/a.js(7,5): error TS2300: Duplicate identifier 'foo'.


==== tests/cases/compiler/a.js (4 errors) ====
    //// [thisKeyword.ts]
    module foo {
           ~~~
!!! error TS2300: Duplicate identifier 'foo'.
           ~~~
!!! error TS8006: 'module' declarations can only be used in TypeScript files.
        this.bar = 4;
        ~~~~
!!! error TS2331: 'this' cannot be referenced in a module or namespace body.
    }
    
    //// [thisKeyword.js]
    var foo;
        ~~~
!!! error TS2300: Duplicate identifier 'foo'.
    (function (foo) {
        this.bar = 4;
    })(foo || (foo = {}));